# backend/src/main/java/com/picklepro/model/Venue.java
@@ -1,0 +1,21 @@
+package com.picklepro.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import org.springframework.data.annotation.Id;
+import org.springframework.data.mongodb.core.mapping.Document;
+
+@Data
+@Builder
+@NoArgsConstructor
+@AllArgsConstructor
+@Document(collection = "venues")
+public class Venue {
+    @Id
+    private String id;
+    private String name;
+    private String location;
+    private int courtCount;
+}
